chore(all): commit

--- a/01.Numpy/numpy.ipynb
+++ b/01.Numpy/numpy.ipynb
@@ -376,9 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# 정렬\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mseed(\u001b[39m10\u001b[39m)\n\u001b[1;32m      3\u001b[0m data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m,\u001b[39m50\u001b[39m,\u001b[39m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(data)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 정렬\n",
     "np.random.seed(10)\n",
@@ -397,9 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m name \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39m홍길동\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m저팔\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m사오\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m전우치\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m삼자\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m score \u001b[39m=\u001b[39m [\u001b[39m75\u001b[39m,\u001b[39m100\u001b[39m,\u001b[39m95\u001b[39m,\u001b[39m56\u001b[39m,\u001b[39m99\u001b[39m]\n\u001b[0;32m----> 5\u001b[0m name \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(name)\n\u001b[1;32m      6\u001b[0m name \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(score)\n\u001b[1;32m      8\u001b[0m idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(score)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 학생 이름과 점수 데이터를 이용하여 성적이 우수한 학생 순서로 이름을 출력하시오.\n",
     "name = ['홍길동','저팔','사오','전우치','삼자']\n",
