--- a/03.선도표/Matplotib실습.ipynb
+++ b/03.선도표/Matplotib실습.ipynb
@@ -1063,6 +1063,21 @@
     "       )\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 박스 플롯 그리기\n",
+    "- plt.boxpolt(): 많은 데이터에서 데이터의 범위와 중앙값 등 통계 수치 값을 확인하고자 하는 목적으로 사용한다.\n",
+    "- 이상치(Outlier)가 있는지 검수하기 수월하다.\n",
+    "  - 최소값: 제 1사분위에서 1.5IQR\n",
+    "  - (Inter Quantile Range: 사분위수범위, Q3-Q1)을 뺀 위치\n",
+    "  - 제 1사분위(Q1): 중앙값 기준으로 하위 50%중의 중앙값. \n",
+    "  - 즉, 전체데이터중 하위 25%에 해당하는 값\n",
+    "  - "
+   ]
   }
  ],
  "metadata": {
