feat(all): middle commit

--- a/05.Web Crawling/01.Scrapping.ipynb
+++ b/05.Web Crawling/01.Scrapping.ipynb
@@ -4015,14 +4015,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "URL = 'https://datalab.naver.com/'\n",
-    "params = {'q':'python'}\n",
-    "userAgent = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36'\n",
-    "headers = {'user-agent': userAgent}"
+    "res = req.get(URL)\n",
+    "html_text = res.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원피스\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = html_text.split('<em class=\"num\">1</em>')[1]\n",
+    "temp = temp.split('<span class=\"title\">')[1]\n",
+    "temp = temp.split('</span')[0]\n",
+    "print(temp)"
    ]
   }
  ],
