--- a/05.Web Crawling/02.Regular Expression.ipynb
+++ b/05.Web Crawling/02.Regular Expression.ipynb
@@ -30,15 +30,15 @@
     "park 800904-1234567\n",
     "kim 841130-1023451\n",
     "\"\"\"\n",
-    "result= []\n",
+    "movie_box= []\n",
     "for line in data.split('\\n'):\n",
     "  word_result=[]\n",
     "  for word in line.split():\n",
     "    if len(word) == 14 and word[:6].isdigit() and word[7].isdigit():\n",
     "      word = word[:6] + '-' + '*******'\n",
     "    word_result.append(word)\n",
-    "  result.append(' '.join(word_result))\n",
-    "print('\\n'.join(result))"
+    "  movie_box.append(' '.join(word_result))\n",
+    "print('\\n'.join(movie_box))"
    ]
   },
   {
@@ -320,8 +320,8 @@
     "# 알파벳 소문자가 1개 이상이면 매칭\n",
     "p = re.compile('[a-z]+')\n",
     "\n",
-    "result = p.findall('life is too short')\n",
-    "print(result)"
+    "movie_box = p.findall('life is too short')\n",
+    "print(movie_box)"
    ]
   },
   {
@@ -350,8 +350,8 @@
     }
    ],
    "source": [
-    "result = p.finditer('life is too short')\n",
-    "for m in result:\n",
+    "movie_box = p.finditer('life is too short')\n",
+    "for m in movie_box:\n",
     "  print(m)"
    ]
   },
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1358,6 +1358,464 @@
     "\n",
     "print(soup.img)\n",
     "print(soup.img['src']) # 이미지 태그의 src 속성값\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 검색: find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a href=\"#newsstand\"><span>뉴스스탠드 바로가기</span></a>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.find('a'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5 검색: find_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "401\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_box = soup.find_all('a')\n",
+    "print(len(movie_box))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "<span class=\"blind\">쥬니어네이버</span>\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_box = soup.find_all('span', attrs={'class':'blind'})\n",
+    "print(len(movie_box))\n",
+    "print(movie_box[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [실습] 네이버 메인 페이지의 언론사 목록 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "오마이뉴스\n",
+      "스포츠동아\n",
+      "프레시안\n",
+      "한겨레\n",
+      "세계일보\n",
+      "전자신문\n",
+      "KBS World\n",
+      "시사인\n",
+      "경향신문\n",
+      "한국경제\n",
+      "한국경제TV\n",
+      "조선일보\n",
+      "파이낸셜뉴스\n",
+      "SBS\n",
+      "블로터\n",
+      "무등일보\n",
+      "전남일보\n",
+      "광주일보\n",
+      "이코노미스트\n",
+      "스포츠경향\n",
+      "나우뉴스\n",
+      "디지털투데이\n",
+      "베리타스알파\n",
+      "이뉴스투데이\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "res = req.get('https://www.naver.com')\n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "\n",
+    "movie_box = soup.find_all('a',attrs={'class':'thumb'})\n",
+    "print(len(movie_box))\n",
+    "\n",
+    "for news in movie_box :\n",
+    "  print(news.img['alt'])\n",
+    "  # print(news.find('img')['alt'])\n",
+    "# result2 = soup.find_all(result,attrs={'alt':''})\n",
+    "# print(result2[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 태그 내의 문장 가져오기\n",
+    "  - get_text(): 검색 결과에서 태그를 제외한 텍스트만 출력\n",
+    "  - get('속성'): 해당 속성의 값을 출력\n",
+    "  - string: 검색 결과에서 태그안에 또 다른 태그가 없는 경우 해당 내용을 출력.\n",
+    "    - 태그안에 또 다른 태그가 있는 경우에는 None을 반환"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7 검색: select_one(), select()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a href=\"#newsstand\"><span>뉴스스탠드 바로가기</span></a>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "res = req.get('https://www.naver.com')\n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "\n",
+    "print(soup.select_one('div > a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a class=\"link_newsstand\" data-clk=\"title\" href=\"http://newsstand.naver.com/\" target=\"_blank\">뉴스스탠드</a>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup.select_one('#NM_NEWSSTAND_TITLE > a'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 텍스트 가져오기: get_text() / text 필드\n",
+    "- 검색 결과에서 태그를 제외한 텍스트만 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a class=\"air_area\" data-clk=\"squ.dust\" href=\"https://weather.naver.com/today/05200109?cpName=KMA\">\n",
+      "<ul class=\"list_air\">\n",
+      "<li class=\"air_item\">미세<strong class=\"state state_good\">좋음</strong></li>\n",
+      "<li class=\"air_item\">초미세<strong class=\"state state_normal\">보통</strong></li>\n",
+      "</ul>\n",
+      "<span class=\"location\">우산동</span>\n",
+      "</a>\n",
+      "\n",
+      "\n",
+      "미세좋음\n",
+      "초미세보통\n",
+      "\n",
+      "우산동\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = soup.find('a',attrs={'data-clk':'squ.dust'})\n",
+    "print(text)\n",
+    "print(text.get_text())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.9 텍스트 가져오기: string\n",
+    "- 검색 결과에서 태그 안에 또 다른 태그가 없는 경우 해당 내용을 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a class=\"air_area\" data-clk=\"squ.dust\" href=\"https://weather.naver.com/today/05200109?cpName=KMA\">\n",
+      "<ul class=\"list_air\">\n",
+      "<li class=\"air_item\">미세<strong class=\"state state_good\">좋음</strong></li>\n",
+      "<li class=\"air_item\">초미세<strong class=\"state state_normal\">보통</strong></li>\n",
+      "</ul>\n",
+      "<span class=\"location\">우산동</span>\n",
+      "</a>\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<span class=\"location\">우산동</span>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(text)\n",
+    "print(text.string)\n",
+    "\n",
+    "# text.span.get_text()\n",
+    "text.span"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.10 [실습] 네이버 웹툰 제목 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "언론사: 한국경제\n",
+      " 1:\"'닥터 차정숙' 재밌어서 샀는데 왜 이래요\"…종토방 '술렁'\n",
+      " 2:\"7월, 사흘 빼고 매일 비 온다\" 논란의 예보…기상청 답변은\n",
+      " 3:김남국 \"尹정부 실정 덮으려 '코인 이슈' 고의로 흘린 듯\"\n",
+      " 4:6년 간 '스폰남'에게 9억 받아챙긴 女, 증여세 5억 낸다\n",
+      " 5:\"샤넬인 줄\"…종로 귀금속 거리 '짝퉁' 딱 걸렸다\n",
+      "언론사: 서울경제\n",
+      " 1:백종원 \"공무원들 날 죽이고 싶었을 거유\"…예산시장서 무슨 일 있었나?\n",
+      " 2:\"여장사 찾아요\"…90도로 꺾인 젓가락에 여중서 붙인 '공고문'\n",
+      " 3:베트남, 여름 아닌데 벌써 44도…태국선 \"물 부족, 쌀 한번만 재배\"\n",
+      " 4:\"사흘 빼고 7월 내내 비\"…확산되는 '7월 일기예보 괴담'에 기상청은?\n",
+      " 5:스쿨존으로 '일시정지' 없이 나온 車, 자전거 탄 아이와 '쾅'\n",
+      "언론사: 아시아경제\n",
+      " 1:삼겹살집도 '임창정' 뗐다…가맹점도 손절 움직임 확산\n",
+      " 2:\"앞으로 더 오른다\"…수도권 10억 분양가 아파트에 4400여 명 쇄도\n",
+      " 3:\"출산예정일 언제냐\" 물음에 덜미…임신부 행세하며 마약 숨긴 美일당\n",
+      " 4:손가락 잘못 눌렀다 수백조 증발…증권시장 '팻 핑거'의 위협\n",
+      " 5:MB \"尹, 용기 있는 사람\"…청계천 6㎞ 산책\n",
+      "언론사: 매일경제\n",
+      " 1:유서 남기고 사망한 30대 트로트 가수는 ‘해수’였다\n",
+      " 2:“‘목욕하라’더니 온 몸 닦아주고 성관계”…전 아이돌 폭로 사실이었다\n",
+      " 3:“피임기구 들이대며 ‘사랑하자’”…중학생 친딸 가슴만진 40대男\n",
+      " 4:“차라리 돈 다 털어 사겠다”...2030 몰려간 동네는 어디? [매부리레터]\n",
+      " 5:“1분에 1300원”…극성男 요청에 美미녀스타가 택한 방법\n",
+      "언론사: 헤럴드경제\n",
+      " 1:“아! 일본에 질렸다” 작정하고 ‘칼 갈은’ 삼성에 무슨 일이\n",
+      " 2:“왜 하필 송혜교와 붙어서” 대항마 베팅 ‘티빙’ 400억 초유의 적자 사태\n",
+      " 3:인터넷방송 1회로 9600만원…‘10년치 연봉’번 中여교사, 일 관뒀다\n",
+      " 4:인형뽑기 한방에 성공…‘진짜 고양이’ 나와 기지개 쭉 ‘깜짝’\n",
+      " 5:결혼반지가 짝퉁?…예비부부 울리는 짝퉁 귀금속\n",
+      "언론사: 한국경제TV\n",
+      " 1:\"롯데타워 맞먹는 초고층 타워 건설\"…103층 빌딩 이곳에\n",
+      " 2:'투자경고' 모르겠고…4연속 상한가 턱밑\n",
+      " 3:이럴 거면 왜 샀지?…車 소유자 90% \"하루 2시간도 안 타\"\n",
+      " 4:억대 연봉에도 직원 줄퇴사하는 이곳…'신의 직장'도 옛말\n",
+      " 5:\"남들 두려워할 때 욕심내라\"…지금이 매수 타이밍?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "from bs4 import BeautifulSoup\n",
+    "URL = 'https://news.naver.com/main/ranking/popularDay.naver'\n",
+    "userAgent = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36'\n",
+    "headers = {'user-agent': userAgent}\n",
+    "\n",
+    "res = req.get(URL, headers=headers)\n",
+    "# 200이 아니면 오류를 내고 멈춤\n",
+    "res.raise_for_status()\n",
+    "# TODO \n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "movie_box = soup.find_all('div',attrs={'class':'rankingnews_box'})\n",
+    "# print(len(result))\n",
+    "# print(result[0].a.strong.text)\n",
+    "\n",
+    "\n",
+    "for news in movie_box:\n",
+    "  press_title = news.a.strong.text\n",
+    "  if '경제' in press_title:\n",
+    "    print(\"언론사:\",press_title)\n",
+    "    top_5 = news.find_all('div',attrs={'class':'list_content'})\n",
+    "    for i, rankingnews in enumerate(top_5, 1):\n",
+    "      print(f'{i:2d}:{rankingnews.a.text}')\n",
+    "\n",
+    "\n",
+    "# for news in result :\n",
+    "#   print(news.get_text())\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [실습] 다음 영화에서 이미지 스크래핑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "폴더가 존재함\n",
+      "분노의 질주: 라이드 오어 다이\n",
+      "가디언즈 오브 갤럭시: Volume 3\n",
+      "문재인입니다\n",
+      "범죄도시3\n",
+      "스즈메의 문단속\n",
+      "슈퍼 마리오 브라더스\n",
+      "슬픔의 삼각형\n",
+      "극장판 짱구는 못말려: 동물소환 닌자 배꼽수비대\n",
+      "드림\n",
+      "유랑지구2\n",
+      "존 윅 4\n",
+      "롱디\n",
+      "메리 마이 데드 바디\n",
+      "옥수역귀신\n",
+      "남은 인생 10년\n",
+      "스트리머\n",
+      "거울 속 외딴 성\n",
+      "토리와 로키타\n",
+      "조제, 호랑이 그리고 물고기들\n",
+      "클로즈\n",
+      "저장완료!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "from bs4 import BeautifulSoup\n",
+    "import os\n",
+    "\n",
+    "URL = 'https://movie.daum.net/ranking/reservation'\n",
+    "userAgent = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36'\n",
+    "headers = {'user-agent': userAgent}\n",
+    "res = req.get(URL, headers=headers)\n",
+    "# 200이 아니면 오류를 내고 멈춤\n",
+    "res.raise_for_status()\n",
+    "\n",
+    "\n",
+    "soup = BeautifulSoup(res.text,'lxml')\n",
+    "movie_box = soup.find_all('div', attrs={'class':'item_poster'})\n",
+    "print(len(movie_box))\n",
+    "\n",
+    "img_dir = './poster_img/'\n",
+    "if not os.path.exists(img_dir):\n",
+    "  os.makedirs(img_dir)\n",
+    "  print('폴더 생성 완료')\n",
+    "else:\n",
+    "  print('폴더가 존재함')\n",
+    "\n",
+    "for i, movie in enumerate(movie_box,1):\n",
+    "  poster_title = movie.img.get('alt')\n",
+    "  img_url = movie.img.get('src')\n",
+    "  print(poster_title)\n",
+    "  if ':' in poster_title:\n",
+    "    poster_title = poster_title.replace(':','')\n",
+    "  img_res = req.get(img_url)\n",
+    "  with open(f'{img_dir}{i:02d}_{poster_title}.jpg','wb') as f:\n",
+    "    f.write(res.content)\n",
+    "print('저장완료!')\n",
+    "\n",
+    "\n",
+    "# for movies in movie_box:\n",
+    "#   poster_title = movies.img.get('alt')\n",
+    "#   print(poster_title)\n",
+    "#   poster_img = movies.img.get('src')\n",
+    "#   print(poster_img)\n",
+    "#   res = req.get(poster_img)\n",
+    "#   with open(f'poster_img/{poster_title}.jpg','wb') as f:\n",
+    "#     f.write(res.content)\n",
+    "# print('저장완료!')"
    ]
   }
  ],
