--- a/평가/노기훈.ipynb
+++ b/평가/노기훈.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,24 +158,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building Machine Learning Systems with Python 한국어판\n",
+      "27,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬 Python 2학년\n",
+      "15,300원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "Python(파이썬)과 Matplotlib, NumPy, Pandas\n",
+      "10,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "2023 빅데이터분석기사 실기 한권완성 필답형+작업형 [파이썬(Python)]\n",
+      "27,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "Python Standard Library\n",
+      "18,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "데이터에듀 빅데이터 분석기사 실기 with Python\n",
+      "28,800원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "Python을 이용한 개인화 추천 시스템\n",
+      "20,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬 라이브러리를 활용한 데이터 분석\n",
+      "35,100원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "알 스웨이가트의 파이썬 프로젝트\n",
+      "25,200원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬 머신러닝 실무 테크닉 100\n",
+      "22,500원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "한 권으로 다지는 머신러닝&딥러닝 with 파이썬\n",
+      "32,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "스파르타! 파이썬 포렌식\n",
+      "25,200원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "21개의 작고 재미난 파이썬 프로젝트\n",
+      "27,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬 챌린지\n",
+      "7,840원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "뚝딱뚝딱 파이썬 자동화\n",
+      "29,700원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬을 이용한 알고리즘 트레이딩\n",
+      "26,100원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "나의 첫 파이썬 (2판)\n",
+      "24,000원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "예제로 배우는 파이썬 머신러닝\n",
+      "29,700원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "RESTful 파이썬 웹 서비스 제작\n",
+      "31,500원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "실전 파이썬 핸즈온 프로젝트\n",
+      "25,200원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "파이썬으로 시작하는 캐글\n",
+      "16,200원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "객체지향 파이썬 프로그래밍\n",
+      "40,500원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "엔지니어를 위한 파이썬\n",
+      "25,200원\n",
+      "10.0\n",
+      "--------------------------------------------------\n",
+      "개념을 잡아주는 프로그래밍 정석\n",
+      "22,500원\n",
+      "10.0\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "userAgent = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36'\n",
     "headers = {'user-agent': userAgent}\n",
-    "URL = 'http://www.yes24.com'\n",
+    "URL = 'http://www.yes24.com/Product/Search?query=python&domain=ALL&page=1&order=CONT_CNT'\n",
+    "\n",
     "res = req.get(URL,headers=headers)\n",
     "res.raise_for_status()\n",
-    "print(res.status_code)\n",
-    "soup = BeautifulSoup(res.text,'html.parser')"
+    "# print(res.status_code)\n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "\n",
+    "books = soup.find_all('div', attrs={'class':'item_info'})\n",
+    "titles = soup.find_all('div', attrs={'class':'info_row info_name'})\n",
+    "prices = soup.find_all('div', attrs={'class':'info_row info_price'})\n",
+    "ratings = soup.find_all('span', attrs={'class':'rating_grade'})\n",
+    "\n",
+    "\n",
+    "for i, book in enumerate(ratings,0):\n",
+    "  print(titles[i].a.text)\n",
+    "  print(prices[i].strong.text)\n",
+    "  print(ratings[i].em.text)\n",
+    "  print('-'*50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[183], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m soup \u001b[39m=\u001b[39m BeautifulSoup(res\u001b[39m.\u001b[39mtext,\u001b[39m'\u001b[39m\u001b[39mhtml.parser\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m music \u001b[39m=\u001b[39m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m'\u001b[39m, attrs\u001b[39m=\u001b[39m{\u001b[39m'\u001b[39m\u001b[39mclass\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mellipsis rank01\u001b[39m\u001b[39m'\u001b[39m})\n\u001b[0;32m---> 12\u001b[0m \u001b[39mfor\u001b[39;00m i, m \u001b[39min\u001b[39;00m music:\n\u001b[1;32m     13\u001b[0m   \u001b[39mprint\u001b[39m(music\u001b[39m.\u001b[39mspan\u001b[39m.\u001b[39ma\u001b[39m.\u001b[39mtext)\n\u001b[1;32m     15\u001b[0m index \u001b[39m=\u001b[39m []\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "URL = 'https://www.melon.com/new/index.htm'\n",
+    "res = req.get(URL,headers=headers)\n",
+    "res.raise_for_status()\n",
+    "# print(res.status_code)\n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "\n",
+    "\n",
+    "곡명 = soup.find_all('div', attrs={'class':'ellipsis rank01'})\n",
+    "가수 = soup.find_all('div', attrs={'class':'ellipsis rank02'})\n",
+    "앨범 = soup.find_all('div', attrs={'class':'ellipsis rank03'})\n",
+    "\n",
+    "\n",
+    "index = []\n",
+    "곡목 = []\n",
+    "가수 = []\n",
+    "앨범 = []\n",
+    "\n",
+    "for i, m in range(len(10)):\n",
+    "  print(곡명.span.a.text)\n",
+    "  print(가수.span.a.text)\n",
+    "  print(앨범.span.a.text)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
