--- a/14. (PCA) 공분산 이해하기/PCA.ipynb
+++ b/14. (PCA) 공분산 이해하기/PCA.ipynb
@@ -24,9 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.73,  1.86, 15.8 ,  4.05,  7.27, 45.66, 34.92],\n",
+       "       [ 3.57,  1.8 , 16.23,  2.96,  6.71, 42.56, 37.31],\n",
+       "       [ 3.22,  1.83, 14.2 ,  3.51,  6.68, 44.54, 39.23],\n",
+       "       [ 2.81,  1.8 , 15.23,  2.69,  6.25, 42.78, 31.19],\n",
+       "       [ 2.91,  1.74, 14.76,  2.68,  6.32, 47.46, 35.53],\n",
+       "       [ 2.67,  1.83, 13.5 ,  1.96,  6.33, 42.82, 37.64]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -37,13 +53,70 @@
     "              [2.81, 1.80, 15.23, 2.69, 6.25, 42.78, 31.19],\n",
     "              [2.91, 1.74, 14.76, 2.68, 6.32, 47.46, 35.53],\n",
     "              [2.67, 1.83, 13.50, 1.96, 6.33, 42.82, 37.64]\n",
-    "])"
+    "])\n",
+    "A"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 허들 종목 기록 데이터 및 통계지표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "허들종목 기록 데이터\n",
+      "[3.73 3.57 3.22 2.81 2.91 2.67]\n",
+      "3.152\n",
+      "0.184\n",
+      "0.392\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('허들종목 기록 데이터')\n",
+    "hurdles = A[:,0]\n",
+    "print(hurdles)\n",
+    "# 평균\n",
+    "average =round(np.mean(hurdles),3)\n",
+    "print(average)\n",
+    "# 분산 (N - ddof)값으로 나눈 평균을 계산\n",
+    "var = round(np.var(hurdles, ddof=1),3)\n",
+    "print(var)\n",
+    "# 표준편차\n",
+    "std = round(np.std(hurdles),3)\n",
+    "print(std)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
