--- a/14. (PCA) 공분산 이해하기/PCA.ipynb
+++ b/14. (PCA) 공분산 이해하기/PCA.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "       [ 2.67,  1.83, 13.5 ,  1.96,  6.33, 42.82, 37.64]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,43 @@
     "print(std)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 공분산 행렬 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.184,  0.007,  0.325,  0.262,  0.151,  0.109,  0.222],\n",
+       "       [ 0.007,  0.002, -0.001,  0.014,  0.01 , -0.029,  0.022],\n",
+       "       [ 0.325, -0.001,  1.028,  0.388,  0.199, -0.026, -1.06 ],\n",
+       "       [ 0.262,  0.014,  0.388,  0.528,  0.244,  0.524,  0.078],\n",
+       "       [ 0.151,  0.01 ,  0.199,  0.244,  0.148,  0.157,  0.21 ],\n",
+       "       [ 0.109, -0.029, -0.026,  0.524,  0.157,  3.884,  0.085],\n",
+       "       [ 0.222,  0.022, -1.06 ,  0.078,  0.21 ,  0.085,  7.871]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.set_printoptions(suppress=True,precision=3)\n",
+    "# rowvar: True(기본값)인 경우에는 행이 변수를 나타내며, 열은 각 변수의 관측치를 나타낸다.\n",
+    "B = np.cov(A,rowvar=False)\n",
+    "B"
    ]
   }
  ],
