--- a/14. (PCA) 공분산 이해하기/PCA.ipynb
+++ b/14. (PCA) 공분산 이해하기/PCA.ipynb
@@ -135,6 +135,36 @@
     "B = np.cov(A,rowvar=False)\n",
     "B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.184,  0.007,  0.325,  0.262,  0.151,  0.109,  0.222],\n",
+       "       [ 0.007,  0.002, -0.001,  0.014,  0.01 , -0.029,  0.022],\n",
+       "       [ 0.325, -0.001,  1.028,  0.388,  0.199, -0.026, -1.06 ],\n",
+       "       [ 0.262,  0.014,  0.388,  0.528,  0.244,  0.524,  0.078],\n",
+       "       [ 0.151,  0.01 ,  0.199,  0.244,  0.148,  0.157,  0.21 ],\n",
+       "       [ 0.109, -0.029, -0.026,  0.524,  0.157,  3.884,  0.085],\n",
+       "       [ 0.222,  0.022, -1.06 ,  0.078,  0.21 ,  0.085,  7.871]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_mean = np.mean(A,axis=0)\n",
+    "X = A - col_mean\n",
+    "cov = X.T.dot(X) / (len(X)-1)\n",
+    "# 코베리언스\n",
+    "cov"
+   ]
   }
  ],
  "metadata": {
